TESIS-162 test(github-client): corrige test de paginación de PRs con WireMock
          El test 'getPullRequests_whenOldPrIsFound_shouldStopPaging' fallaba por dos razones:

          1. La URL de paginación en la cabecera 'Link' del mock de WireMock no resolvía la variable del puerto, causando un error "Bad authority" en el cliente HTTP.
             - Se soluciona inyectando el puerto real de WireMock con @Value y construyendo la URL dinámicamente.

          2. La verificación de WireMock (`verify`) era demasiado genérica y contaba tanto la llamada inicial como la de la segunda página, causando un fallo de aserción.
             - Se hace la verificación más específica, añadiendo los query params esperados en la primera llamada para diferenciarla de la segunda.